--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.7",
+    "mongoose-paginate": "^5.0.3",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.3",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "request": "^2.88.2",
     "sharp": "^0.25.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.4"
   }
 }
