--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.7",
     "mongoose-paginate": "^5.0.3",
     "multer": "^1.4.2",
